# matrissi

./: .hgignore  README.rst  pyproject.toml
src/matriisi/: __init__.py  id_dict.py  identifier.py  login.py  roboclient.py  state.py  utils.py
src/matriisi/dataclasses/: base.py  member.py  message.py  room.py
src/matriisi/event/: __init__.py  base.py  bus.py  im.py  member.py  room.py
src/matriisi/http/: __init__.py  httpclient.py  httpevents.py  structs.py
src/matriisi/robotics/: roboclient.py  state.py
src/matriisi/robotics/event/: __init__.py  base.py  bus.py  im.py  member.py  room.py
